# reposage

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
outputs/: report.md  summary.json
src/: pyproject.toml
src/reposage/: crew.py  main.py
src/reposage/config/: agents.yaml  tasks.yaml
src/reposage/health/: badge.py  risky_files.py  scorer.py
src/reposage/output/: normalize_output.py  report_generator.py  report_pdf_generator.py  summary_generator.py
src/reposage/tools/: file_classifier.py  file_scanner.py  language_detector.py  repo_cloner.py
src/reposage/tools/performance/: n_plus_one.py  pagination_check.py  sync_io.py
src/reposage/tools/security/: auth_heuristics.py  endpoint_heuristics.py  secret_scanner.py
