[project]
name = "reposage"
version = "0.1.0"
description = "reposage using crewAI"
authors = [{ name = "Saidul Mondal", email = "mondalsaidul3232@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "openai>=1.12.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.0",
    "rich>=13.7.0"
]

[project.scripts]
reposage = "reposage.main:run"
run_crew = "reposage.main:run"
train = "reposage.main:train"
replay = "reposage.main:replay"
test = "reposage.main:test"
run_with_trigger = "reposage.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
